<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/iBottom_bar_menu_movie"
        android:enabled="true"
        android:title="@string/bottom_bar_pelis"
        android:icon="@drawable/ic_navigation_bar_movie"/>
    <item
        android:id="@+id/iBottom_bar_menu_rate"
        android:enabled="true"
        android:title="@string/bottom_bar_puntos"
        android:icon="@drawable/ic_navigation_bar_like"/>
    <item
        android:id="@+id/iBottom_bar_menu_favorite"
        android:enabled="true"
        android:title="@string/bottom_bar_votos"
        android:icon="@drawable/ic_navigation_bar_favorite"/>
    <item
        android:id="@+id/iBottom_bar_menu_music"
        android:enabled="true"
        android:title="@string/bottom_bar_music"
        android:icon="@drawable/ic_navigation_bar_music"/>
</menu>