<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rowFilterCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_movie_height"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="@dimen/card_movie_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/imgMovieFilter"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="34"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_movie_creation_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="66"
                android:layout_height="match_parent"
                android:weightSum="13"
                android:background="@color/colorGold"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTituloFilter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="serif"
                    android:paddingLeft="15dp"
                    android:textSize="30sp"
                    tools:text="TextView"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:paddingLeft="15dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        android:text="@string/date_film_detail"/>


                    <TextView
                        android:id="@+id/txtFechaFilter"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        tools:text="TextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:paddingLeft="15dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        android:text="@string/votes_film_detail"/>


                    <TextView
                        android:id="@+id/txtVotos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        tools:text="TextView"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:paddingLeft="15dp"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        android:text="@string/activity_one_movie_tv_puntuacion"/>


                    <TextView
                        android:id="@+id/txtPuntos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="serif"
                        android:textSize="14sp"
                        tools:text="TextView"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>